--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.0",
+    "@prisma/client": "5.10.2",
     "next": "15.0.3",
     "openai": "^4.73.1",
-    "prisma": "^6.0.0",
+    "prisma": "5.10.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
