--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "next": "15.0.3",
     "openai": "^4.73.1",
     "prisma": "5.10.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "latest"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
